--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "chart.js": "^4.5.1",
     "lucide-vue-next": "^0.552.0",
     "vue": "^3.5.22"
   },
